--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,8 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-beta04'
 
-    // Pager
+    // Accompanist
+    implementation "com.google.accompanist:accompanist-insets:0.20.2"
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
 
