--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.0'
         coil_version = '1.4.0'
+        lifecycle_version = '2.4.0'
     }
     repositories {
         google()
