--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,10 +79,11 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-beta04'
 
     // Accompanist
-    implementation "com.google.accompanist:accompanist-insets:0.20.2"
-    implementation "com.google.accompanist:accompanist-swiperefresh:0.21.4-beta"
-    implementation "com.google.accompanist:accompanist-pager:0.19.0"
-    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
