--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,10 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
-    implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-beta04'
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
