Update coil version to 2.0.0-alpha05

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         useIR = true
-        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn", "-Xjvm-default=all"]
     }
     buildFeatures {
         compose true
