--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         hilt_version = '2.40.5'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.1'
-        coil_version = '1.4.0'
+        coil_version = '2.0.0-alpha05'
         lifecycle_version = '2.4.0'
         accompanist_version = '0.21.4-beta'
     }
