--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.0-beta04'
+        compose_version = '1.1.0-rc01'
         hilt_version = '2.40.5'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.3'
         coil_version = '2.0.0-alpha05'
         lifecycle_version = '2.4.0'
-        accompanist_version = '0.21.4-beta'
+        accompanist_version = '0.22.0-rc'
     }
     repositories {
         google()
@@ -15,7 +15,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
