--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.0-rc01'
+        compose_version = '1.2.0-alpha02'
         hilt_version = '2.40.5'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.3'
         coil_version = '2.0.0-alpha06'
         lifecycle_version = '2.4.0'
-        accompanist_version = '0.22.0-rc'
+        accompanist_version = '0.24.1-alpha'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-rc01'
+        classpath 'com.android.tools.build:gradle:7.2.0-beta01'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
