--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,18 +4,19 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 def properties = new Properties()
 properties.load(rootProject.file('local.properties').newDataInputStream())
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.crakac.ofutodon"
-        minSdk 21
-        targetSdk 31
+        minSdk 26
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -49,13 +50,17 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11
         useIR = true
-        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn", "-Xjvm-default=all"]
+        freeCompilerArgs += [
+                "-Xopt-in=kotlin.RequiresOptIn", "-Xjvm-default=all",
+                "-P",
+                "plugin:androidx.compose.compiler.plugins.kotlin:reportsDestination=compose_report",
+        ]
     }
     buildFeatures {
         compose true
@@ -75,7 +80,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.5.0-alpha03'
     implementation 'com.google.android.material:material:1.5.0'
 
     // Compose
@@ -85,7 +90,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.0-alpha02'
+    implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
@@ -111,9 +116,11 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:20.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
