--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.2.0-alpha03'
-        hilt_version = '2.40.5'
+        compose_version = '1.2.0-alpha05'
+        hilt_version = '2.41'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.3'
-        coil_version = '2.0.0-alpha06'
-        lifecycle_version = '2.4.1'
-        accompanist_version = '0.24.2-alpha'
+        coil_version = '2.0.0-rc01'
+        lifecycle_version = '2.5.0-alpha04'
+        accompanist_version = '0.24.3-alpha'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0-beta02'
+        classpath 'com.android.tools.build:gradle:7.2.0-beta04'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
