--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlinx.kover' version '0.5.0'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'kover'
