--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,12 @@ jobs:
         with:
           name: debug-apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
+      - run: ./gradlew lint
+
+      - name: Upload lint report
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: debug-apk
+          path: app/build/reports/*
