--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,8 +80,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.activity:activity-compose:1.5.0-alpha03'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.activity:activity-compose:1.6.0-alpha03'
+    implementation 'com.google.android.material:material:1.6.0'
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -90,7 +90,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
+    implementation 'androidx.navigation:navigation-compose:2.5.0-rc01'
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
@@ -120,10 +120,10 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:20.1.0'
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
