--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
     }
 
     buildTypes {
@@ -44,11 +41,6 @@ android {
         }
     }
 
-    sourceSets {
-        test.resources.srcDirs += ["src/test/resources"]
-        androidTest.resources.srcDirs += ["src/test/resources"]
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -56,17 +48,13 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11
         useIR = true
-        freeCompilerArgs += [
-                "-Xopt-in=kotlin.RequiresOptIn", "-Xjvm-default=all",
-                "-P",
-                "plugin:androidx.compose.compiler.plugins.kotlin:reportsDestination=compose_report",
-        ]
+        freeCompilerArgs += ["-opt-in=kotlin.RequiresOptIn"]
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion libs.versions.androidx.compose.get()
     }
     packagingOptions {
         resources {
@@ -78,55 +66,40 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.activity:activity-compose:1.6.0-alpha03'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation libs.androidx.core
+    implementation libs.androidx.appcompat
+    implementation libs.androidx.activity.compose
+    implementation libs.bundles.androidx.lifecycle
+    implementation libs.bundles.androidx.compose
 
-    // Compose
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation libs.material
 
-    // Navigation
-    implementation 'androidx.navigation:navigation-compose:2.5.0-rc01'
-
-    // Accompanist
-    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
-    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
-
-    // Lifecycle
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation libs.bundles.accompanist
 
     // Retrofit & OkHttp
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    testImplementation "com.squareup.retrofit2:retrofit-mock:$retrofit_version"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+    implementation libs.retrofit
+    implementation libs.retrofit.converter.gson
+    implementation libs.okhttp
+    implementation libs.okhttp.interceptor
+    testImplementation libs.retrofit.mock
+    testImplementation libs.okhttp.mock
 
     // Coil
-    implementation "io.coil-kt:coil-compose:$coil_version"
+    implementation libs.coil
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation libs.hilt
+    implementation libs.hilt.navigation.compose
+    kapt libs.hilt.compiler
 
     // Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:21.0.0'
+    implementation libs.firebase.analytics
 
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    testImplementation libs.junit
+    testImplementation libs.coroutines.test
+    androidTestImplementation libs.junit.ext
+    androidTestImplementation libs.espresso
+    androidTestImplementation libs.compose.junit
+    debugImplementation libs.compose.tooling
+    debugImplementation libs.compose.manifest
 }
