--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ timber = "5.0.1"
 spotless = "6.5.2"
 # Test
 kover = "0.5.0"
+truth = "1.1.3"
 junit = "4.13.2"
 junit-ext = "1.1.3"
 espresso = "3.4.0"
@@ -105,6 +106,7 @@ timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 # Test
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit-ext" }
+truth = {module = "com.google.truth:truth", version.ref = "truth"}
 espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 
 [bundles]
