--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -15,11 +15,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 org.gradle.daemon=false
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx4096m
 org.gradle.workers.max=2
+org.gradle.jvmargs=-Xmx6g
 
 kotlin.incremental=false
 kotlin.compiler.execution.strategy=in-process
+warningsAsErrors=false
