Refactor: Update dependencies and Gradle settings
This commit updates various dependencies to their latest versions, including:
- Accompanist from 0.29.1-alpha to 0.30.1
- Android Gradle Plugin from 7.4.1 to 8.12.0
- AndroidX libraries (Activity, AppCompat, Compose, Core, Lifecycle, Navigation)
- Coil from 2.2.2 to 2.7.0
- Espresso from 3.5.1 to 3.7.0
- Hilt from 2.44.2 to 2.57
- Kotlin from 1.8.0 to 2.2.0
- Coroutines from 1.6.4 to 1.10.2
- Serialization from 1.5.0-RC to 1.9.0
- Kover from 0.7.0-ALPHA to 0.9.1
- OkHttp from 5.0.0-alpha.11 to 5.1.0
- Retrofit from 2.9.0 to 3.0.0
- Spotless from 6.14.0 to 7.2.1
- Truth from 1.1.3 to 1.4.4
- Gradle from 7.5 to 8.14.3
- ben-manes.versions plugin from 0.41.0 to 0.52.0
- version-catalog-update plugin from 0.7.0 to 1.0.0

It also includes the following changes:
- Updates compileSdk and targetSdk to 36.
- Sets Java source and target compatibility to version 11.
- Removes unused `themes.xml` for night mode and simplifies existing theme.
- Updates plugin aliases in `libs.versions.toml` and build scripts.
- Modifies `gradle.properties` with new Android build feature flags.
- Adjusts `spotless` configuration for build directory exclusion.
- Updates `gradlew` and `gradlew.bat` scripts.
- Replaces `kotlin-kapt` with `ksp` for annotation processing.
- Removes `firebase-analytics` and `google-services` dependencies.
- Updates Proguard rules and packaging options in `app/build.gradle.kts`.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Ofutodon.NoActionBar"
+            android:theme="@style/Theme.Ofutodon"
             android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
