--- a/gradle/android.gradle
+++ b/gradle/android.gradle
@@ -1,18 +1,18 @@
 android {
-    compileSdk = 33
+    compileSdk = 36
 
     defaultConfig {
         minSdk = 26
-        targetSdk = 33
+        targetSdk = 36
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = JavaVersion.VERSION_11.toString()
     }
 
     testOptions {
