--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,41 +1,28 @@
 [versions]
-accompanist = "0.29.1-alpha"
-# AGP
-android-gradle = "7.4.1"
-androidx-activity-compose = "1.7.0-alpha04"
-androidx-appcompat = "1.7.0-alpha01"
-androidx-compose = "1.4.0-alpha05"
-androidx-compose-compiler = "1.4.0"
-# AndoirdX
-androidx-core = "1.8.0-alpha06"
-androidx-lifecycle = "2.6.0-alpha05"
-androidx-navigation = "2.6.0-alpha04"
-coil = "2.2.2"
-espresso = "3.5.1"
-firebase-analytics = "21.2.0"
-# Firebase
-google-services = "4.3.15"
-# Hilt
-hilt = "2.44.2"
-hilt-navigation-compose = "1.1.0-alpha01"
+accompanist = "0.30.1"
+android-gradle = "8.12.0"
+androidx-activity-compose = "1.10.1"
+androidx-appcompat = "1.7.1"
+androidx-compose = "1.8.3"
+androidx-core = "1.16.0"
+androidx-lifecycle = "2.9.2"
+androidx-navigation = "2.9.3"
+coil = "2.7.0"
+espresso = "3.7.0"
+hilt = "2.57"
+hilt-navigation-compose = "1.2.0"
 junit = "4.13.2"
-junit-ext = "1.1.5"
-# Kotlin
-kotlin = "1.8.0"
-kotlin-coroutines = "1.6.4"
-kotlin-serialization-json = "1.5.0-RC"
-# Test
-kover = "0.7.0-ALPHA"
-# Material
-material = "1.9.0-alpha01"
-okhttp = "5.0.0-alpha.11"
-# Network
-retrofit = "2.9.0"
-# Formatter
-spotless = "6.14.0"
-# Log
+junit-ext = "1.3.0"
+kotlin = "2.2.0"
+kotlinx-coroutines = "1.10.2"
+kotlinx-kover = "0.9.1"
+kotlinx-serialization = "1.9.0"
+ksp = "2.2.0-2.0.2"
+okhttp = "5.1.0"
+retrofit = "3.0.0"
+spotless = "7.2.1"
 timber = "5.0.1"
-truth = "1.1.3"
+truth = "1.4.4"
 
 [libraries]
 accompanist-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "accompanist" }
@@ -45,9 +32,7 @@ accompanist-permissions = { module = "com.google.accompanist:accompanist-permiss
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanist" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
-androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose-compiler"}
 androidx-compose-junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose" }
-androidx-compose-livedata = "androidx.compose.runtime:runtime-livedata:1.4.0-alpha04"
 androidx-compose-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-compose" }
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
 androidx-compose-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose" }
@@ -59,18 +44,15 @@ androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-kt
 androidx-lifecycle-viewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlin-coroutines" }
+coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
-firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebase-analytics" }
-google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
 junit = { module = "junit:junit", version.ref = "junit" }
 junit-ext = { module = "androidx.test.ext:junit", version.ref = "junit-ext" }
-kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization-json" }
-material = { module = "com.google.android.material:material", version.ref = "material" }
+kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp-mock = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
@@ -90,8 +72,6 @@ accompanist = [
 ]
 androidx-compose = [
     "androidx-activity-compose",
-    "androidx-compose-compiler",
-    "androidx-compose-livedata",
     "androidx-compose-material",
     "androidx-compose-preview",
     "androidx-compose-tooling",
@@ -103,20 +83,19 @@ androidx-lifecycle = [
     "androidx-lifecycle-runtime",
     "androidx-lifecycle-viewModel",
 ]
-okhttp = [
-    "okhttp",
-    "okhttp-interceptor",
-]
-retrofit = [
-    "retrofit",
-    "retrofit-converter-gson",
-]
+okhttp = ["okhttp", "okhttp-interceptor"]
+retrofit = ["retrofit", "retrofit-converter-gson"]
 
 [plugins]
 # Android
 android-application = { id = "com.android.application", version.ref = "android-gradle" }
 android-library = { id = "com.android.library", version.ref = "android-gradle" }
+compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 # Other
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
+kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kotlinx-kover" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
